Revert "Create index.html"
This reverts commit f245d723cba948a89716ee02ecbda34a32df6717.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Strelka</title>
+    <title>Институт "Стрелка"</title>
+    <style type="main.css" rel="stylesheet"></style>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>STRELKA INSTITUTE</h1>
+      <nav class="menu">
+        <ul>
+          <li><a href="#">КУРСЫ</a></li>
+          <li><a href="#">ПРОГРАММЫ</a></li>
+          <li><a href="#">КАЛЕНДАРЬ</a></li>
+          <li><a href="#">МЕДИАТЕКА</a></li>
+          <li><a href="#">О НАС</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">SHOP</a></li>
+          <li><a href="#">MAG</a></li>
+          <li><a href="#">BAR</a></li>
+          <li><a href="#">КБ СТРЕЛКА</a></li>
+        </ul>
+        <ul>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#">ENG</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
