extended structure for header

--- a/index.html
+++ b/index.html
@@ -5,28 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Институт "Стрелка"</title>
-    <style type="main.css" rel="stylesheet"></style>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <header>
-      <h1>STRELKA INSTITUTE</h1>
-      <nav class="menu">
-        <ul>
-          <li><a href="#">КУРСЫ</a></li>
-          <li><a href="#">ПРОГРАММЫ</a></li>
-          <li><a href="#">КАЛЕНДАРЬ</a></li>
-          <li><a href="#">МЕДИАТЕКА</a></li>
-          <li><a href="#">О НАС</a></li>
+      <h1 class="main-header">STRELKA INSTITUTE</h1>
+      <nav class="navigation">
+        <ul class="navigation__menu">
+          <li><a href="courses.html">КУРСЫ</a></li>
+          <li>ПРОГРАММЫ
+
+            <ul>
+              <li><a href="https://theterraforming.strelka.com/">ИССЛЕДОВАТЕЛЬСКАЯ ПРОГРАММА</a></li>
+              <li><a href="https://xn--80akijuiemcz7e.xn--p1ai/">АРХИТЕКТОРЫ.РФ</a></li>
+            </ul>
+
+          </li>
+          <li><a href="calendar.html">КАЛЕНДАРЬ</a></li>
+          <li><a href="media.html">МЕДИАТЕКА</a></li>
+          <li>О НАС
+
+            <ul>
+              <li><a href="about.html">ОБ ИСТИТУТЕ</a></li>
+              <li><a href="partners.html">ПАРТНЕРАМ</a></li>
+              <li><a href="contacts.html">КОНТАКТЫ</a></li>
+            </ul>
+
+          </li>
         </ul>
-        <ul>
-          <li><a href="#">SHOP</a></li>
-          <li><a href="#">MAG</a></li>
-          <li><a href="#">BAR</a></li>
-          <li><a href="#">КБ СТРЕЛКА</a></li>
+        <ul class="navigation__projects">
+          <li><a href="https://store.strelka.com/" target="_blank">SHOP</a></li>
+          <li><a href="https://strelkamag.com/en/" target="_blank">MAG</a></li>
+          <li><a href="https://www.facebook.com/barstrelka/" target="_blank">BAR</a></li>
+          <li><a href="https://strelka-kb.com/" target="_blank">КБ СТРЕЛКА</a></li>
         </ul>
-        <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+        <ul class="navigation__tools">
+          <li><a href="search.html"><img src="icons/search.png" alt="Значек лупы"></a></li>
+          <li><a href=""><img src="icons/person.png" alt="Значек человечка"></a></li>
           <li><a href="#">ENG</a></li>
         </ul>
       </nav>
