header final version

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
       <h1 class="main-header">STRELKA INSTITUTE</h1>
       <nav class="navigation">
         <ul class="navigation__menu">
-          <li><a href="courses.html">КУРСЫ</a></li>
-          <li>ПРОГРАММЫ
+          <li class="menu__li"><a href="courses.html">КУРСЫ</a></li>
+          <li class="menu__li">ПРОГРАММЫ
 
-            <ul>
-              <li><a href="https://theterraforming.strelka.com/">ИССЛЕДОВАТЕЛЬСКАЯ ПРОГРАММА</a></li>
-              <li><a href="https://xn--80akijuiemcz7e.xn--p1ai/">АРХИТЕКТОРЫ.РФ</a></li>
+            <ul class="menu__ul">
+              <li class="menu__ul__li"><a href="https://theterraforming.strelka.com/">ИССЛЕДОВАТЕЛЬСКАЯ ПРОГРАММА</a></li>
+              <li class="menu__ul__li"><a href="https://xn--80akijuiemcz7e.xn--p1ai/">АРХИТЕКТОРЫ.РФ</a></li>
             </ul>
 
           </li>
-          <li><a href="calendar.html">КАЛЕНДАРЬ</a></li>
-          <li><a href="media.html">МЕДИАТЕКА</a></li>
-          <li>О НАС
+          <li class="menu__li"><a href="calendar.html">КАЛЕНДАРЬ</a></li>
+          <li class="menu__li"><a href="media.html">МЕДИАТЕКА</a></li>
+          <li class="menu__li">О НАС
 
-            <ul>
-              <li><a href="about.html">ОБ ИСТИТУТЕ</a></li>
-              <li><a href="partners.html">ПАРТНЕРАМ</a></li>
-              <li><a href="contacts.html">КОНТАКТЫ</a></li>
+            <ul class="menu__ul">
+              <li class="menu__ul__li"><a href="about.html">ОБ ИСТИТУТЕ</a></li>
+              <li class="menu__ul__li"><a href="partners.html">ПАРТНЕРАМ</a></li>
+              <li class="menu__ul__li"><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
 
           </li>
